# qtubuntu-sensors

./: .qmake.conf  CMakeLists.txt  Jenkinsfile  aalsensor-plugins.pro  qtubuntu-sensors.pro
data/: Sensors.conf
debian/: changelog  control  copyright  qtubuntu-sensors.install  qtubuntu-sensors.symbols  rules
feedback/: core_feedback.cpp  core_feedback.h  feedback.pro  qfeedback.cpp  qfeedback.h
lib/: accelerometersensor.cpp  accelerometersensor.h  accelerometersensor_p.h  lib.pro  orientationsensor.cpp  orientationsensor.h  orientationsensor_p.h
plugin/: accelerometersensorimpl.cpp  accelerometersensorimpl.h  common.cpp  common.h  core_sensor_plugins.h  core_shared_accelerometer.cpp  core_shared_accelerometer.h  main.cpp  orientationsensorimpl.cpp  orientationsensorimpl.h  plugin.pro
plugins/: CMakeLists.txt  plugins.pro
plugins/feedback/: CMakeLists.txt  core_feedback.cpp  core_feedback.h  feedback.pro
plugins/position/: CMakeLists.txt  core_geo_position_info_source.cpp  core_geo_position_info_source.h  core_geo_position_info_source_factory.cpp  core_geo_position_info_source_factory.h  position.pro  qgeopositioninfosource_ubuntu.cpp  qgeopositioninfosource_ubuntu_p.h  qgeopositioninfosourcefactory_ubuntu.cpp  qgeopositioninfosourcefactory_ubuntu.h
plugins/sensors/: CMakeLists.txt  core_accelerometer.cpp  core_accelerometer.h  core_compass.cpp  core_compass.h  core_gyroscope.cpp  core_gyroscope.h  core_light.cpp  core_light.h  core_magnetometer.cpp  core_magnetometer.h  core_orientation_sensor.cpp  core_orientation_sensor.h  core_pressure.cpp  core_pressure.h  core_sensor_plugins.cpp  core_sensor_plugins.h  core_shared_accelerometer.cpp  core_shared_accelerometer.h  core_shared_gyroscope.cpp  core_shared_gyroscope.h  core_shared_light.cpp  core_shared_light.h  core_shared_magnetometer.cpp  core_shared_magnetometer.h  core_shared_pressure.cpp  core_shared_pressure.h  core_shared_temperature.cpp  core_shared_temperature.h  core_temperature.cpp  core_temperature.h  sensors.pro  sensors.qrc
tests/: CMakeLists.txt  test_sensor_api.cpp  test_sensor_api_mock.cpp
